2013-09-26
* better filter for LZMA unpacking, based on some information from various
implementations, default settings, plus firmwares found in the wild.
* rework MP4 verifier

2013-09-25
* licenseversion.py: grab function names in parallel
* licenseversion.py: grab license information in chunks
* ignore ELF files in GIF unpacking, yaffs2 unpacking and jffs2 unpacking
* change data structures in ranking.py: lists -> set, also replace list
concatenation with append()
* prevent some string concatenation in generatereports.py
* remove unused code in ranking.py and prerun.py
* deduplicate return offsets in prerun.py

2013-09-24
* fix ignore list of jffs2 and yaffs2 in bruteforce-config
* don't pass 'scans' around needlessly in bruteforcescan.py: arguments passed
to subprocesses are pickled first and this data does not change.
* extract pickles in parallel again in generateimages.py

2013-09-23
* check beforehand whether or not a result needs to be pruned.
* licenseversion.py: don't convert sets back to lists in prune(). Also replace
this in several other files. It can save quite some time as detailed in the
comments of this post:
https://plus.google.com/115212051037621986145/posts/HajXHPGN752
* add verifier for OpenType font data, requires fonttools

2013-09-22
* don't copy reports and images to a temporary location if 'cleanup' is set
but directly write them to the final destination.
* verify and tag ODEX files

2013-09-21
* licenseversion.py: skip equivalent versions (same identifiers) in pruning
* licenseversion.py: shorter loops in pruning by removing unneeded data earlier
* generatereports.py: write results of unique result snippets to disk directly
without keeping them in memory

2013-09-20
* licenseversion.py: replace processing files in parallel with processing
results per file in parallel. In case of one or a few large result files (like
the Linux kernel) this is much more efficient.